--- a/Taskly_Api/appsettings.json
+++ b/Taskly_Api/appsettings.json
@@ -8,5 +8,8 @@
   "ConnectionStrings": {
     "DefaultConnection": "Server=localhost;Port=5432;Database=taskly;User Id=postgres;Password=123456"
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "AuthenticationSettings": {
+    "JwtKey": "764nW5W6LYt072G3569842895Nz559Vb"
+  }
 }
