--- a/Taskly_Domain/Taskly_Domain.csproj
+++ b/Taskly_Domain/Taskly_Domain.csproj
@@ -9,6 +9,8 @@
 
     <ItemGroup>
       <PackageReference Include="ErrorOr" Version="2.0.1" />
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.11" />
     </ItemGroup>
 
 </Project>
