--- a/Taskly_Infrastructure/Taskly_Infrastructure.csproj
+++ b/Taskly_Infrastructure/Taskly_Infrastructure.csproj
@@ -5,7 +5,9 @@
     </ItemGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
       <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="9.0.0" />
+      <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.11" />
     </ItemGroup>
 
     <ItemGroup>
