Add methods GetAllToDoTableItems and CreateToDoTableItem

--- a/Taskly_Api/Taskly_Api.csproj
+++ b/Taskly_Api/Taskly_Api.csproj
@@ -36,6 +36,7 @@
 
     <ItemGroup>
       <Folder Include="images\" />
+      <Folder Include="Request\Table\" />
       <Folder Include="Response\Authenticate\" />
     </ItemGroup>
 
