--- a/Taskly_Application/Taskly_Application.csproj
+++ b/Taskly_Application/Taskly_Application.csproj
@@ -16,6 +16,7 @@
 
     <ItemGroup>
       <Folder Include="Common\Interfaces\" />
+      <Folder Include="Requests\General\Command\" />
     </ItemGroup>
 
     <PropertyGroup>
