--- a/taskly-app/package.json
+++ b/taskly-app/package.json
@@ -12,13 +12,16 @@
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
     "@reduxjs/toolkit": "^2.5.0",
+    "@types/redux-persist": "^4.0.0",
     "axios": "^1.7.9",
     "check-password-strength": "^2.0.10",
+    "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
+    "redux-persist": "^6.0.0",
     "sass": "^1.83.1",
     "ts-key-enum": "^3.0.13",
     "zod": "^3.24.1"
