--- a/Taskly_Api/appsettings.json
+++ b/Taskly_Api/appsettings.json
@@ -15,5 +15,9 @@
   "EmailSettings": {
     "Email": "tasklytodolist@gmail.com",
     "Password": "fzsl aeqm xwgl ianc"
+  },
+  "Gemini": {
+    "ApiKey": "AIzaSyAIdnA6pW60cPVbMy4eufGiER_nrMdWAxM",
+    "Url": "https://generativelanguage.googleapis.com/v1beta/models/gemini-1.5-flash:generateContent"
   }
 }
