--- a/Taskly_Api/appsettings.json
+++ b/Taskly_Api/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "ConnectionStrings": {
-    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=taskly;User Id=postgres;Password=123456"
+//    "DefaultConnection": "Server=127.0.0.1;Port=5432;Database=taskly;User Id=postgres;Password=123456"
+    "DefaultConnection": "Host=db.pshfugmomantmepugwig.supabase.co;Database=postgres;Username=postgres;Password=54U&HfAv5.jNV&W;SSL Mode=Require;Trust Server Certificate=true"
   },
   "AllowedHosts": "*",
   "AuthenticationSettings": {
