--- a/taskly-app/package.json
+++ b/taskly-app/package.json
@@ -15,6 +15,7 @@
     "@types/redux-persist": "^4.0.0",
     "axios": "^1.7.9",
     "check-password-strength": "^2.0.10",
+    "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
