--- a/taskly-app/package.json
+++ b/taskly-app/package.json
@@ -19,6 +19,7 @@
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
+    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
