--- a/taskly-app/package.json
+++ b/taskly-app/package.json
@@ -19,7 +19,6 @@
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.3.1",
-    "react-color": "^2.19.3",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-markdown": "^10.1.0",
@@ -35,6 +34,7 @@
     "@eslint/js": "^9.17.0",
     "@types/node": "^22.10.5",
     "@types/react": "^18.3.18",
+    "@types/react-color": "^3.0.13",
     "@types/react-dom": "^18.3.5",
     "@types/react-syntax-highlighter": "^15.5.13",
     "@vitejs/plugin-react-swc": "^3.5.0",
