--- a/Taskly_Domain/Taskly_Domain.csproj
+++ b/Taskly_Domain/Taskly_Domain.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="ErrorOr" Version="2.0.1" />
       <PackageReference Include="Microsoft.AspNetCore.Identity.EntityFrameworkCore" Version="8.0.11" />
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.11" />
+      <PackageReference Include="Solnet.Wallet" Version="6.1.0" />
     </ItemGroup>
 
 </Project>
