--- a/Taskly_Infrastructure/Taskly_Infrastructure.csproj
+++ b/Taskly_Infrastructure/Taskly_Infrastructure.csproj
@@ -10,6 +10,7 @@
       <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.11" />
       <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
       <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
+      <PackageReference Include="Solnet.Wallet" Version="6.1.0" />
       <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="8.3.0" />
     </ItemGroup>
 
