solana auth in test mode

--- a/taskly-app/package.json
+++ b/taskly-app/package.json
@@ -13,6 +13,9 @@
     "@hookform/resolvers": "^3.10.0",
     "@microsoft/signalr": "^8.0.7",
     "@reduxjs/toolkit": "^2.5.0",
+    "@solana/wallet-adapter-react": "^0.15.38",
+    "@solana/wallet-adapter-react-ui": "^0.9.38",
+    "@solana/wallet-adapter-wallets": "^0.19.36",
     "@types/redux-persist": "^4.0.0",
     "axios": "^1.7.9",
     "check-password-strength": "^2.0.10",
