--- a/Taskly_Application/Taskly_Application.csproj
+++ b/Taskly_Application/Taskly_Application.csproj
@@ -14,6 +14,10 @@
       <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.0" />
     </ItemGroup>
 
+    <ItemGroup>
+      <Folder Include="Requests\SolanaWallet\Authentication\Query\GetSolanaUserProfile\" />
+    </ItemGroup>
+
     <PropertyGroup>
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
