edit avatar for solana users

--- a/taskly-app/tsconfig.app.json
+++ b/taskly-app/tsconfig.app.json
@@ -23,7 +23,8 @@
     "noUnusedParameters": true,
     "noFallthroughCasesInSwitch": true,
     "noUncheckedSideEffectImports": true,
-    "composite": true
+    "composite": true,
+    "allowSyntheticDefaultImports": true
   },
   "include": [
     "src"
