--- a/Taskly_Api/Taskly_Api.csproj
+++ b/Taskly_Api/Taskly_Api.csproj
@@ -14,6 +14,12 @@
       <None Remove="Requests\**" />
     </ItemGroup>
 
+      <ItemGroup>
+         <Content Include="images\**\*.*">
+            <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+         </Content>
+   </ItemGroup>
+
     <ItemGroup>
         <PackageReference Include="Mapster" Version="7.4.0" />
         <PackageReference Include="Mapster.DependencyInjection" Version="1.0.1" />
