--- a/taskly-app/package.json
+++ b/taskly-app/package.json
@@ -17,6 +17,7 @@
     "@solana/wallet-adapter-react-ui": "^0.9.38",
     "@solana/wallet-adapter-wallets": "^0.18.0",
     "@types/redux-persist": "^4.0.0",
+    "@vitejs/plugin-react": "^4.4.1",
     "axios": "^1.7.9",
     "check-password-strength": "^2.0.10",
     "date-fns": "^4.1.0",
