--- a/taskly-app/.env
+++ b/taskly-app/.env
@@ -1,2 +1,3 @@
-VITE_SERVER_URL=https://taskly-backend-0int.onrender.com
+# VITE_SERVER_URL=https://taskly-backend-0int.onrender.com
+ VITE_SERVER_URL=http://localhost:5258
 ; http://localhost:5258
