--- a/taskly-app/package.json
+++ b/taskly-app/package.json
@@ -22,6 +22,7 @@
     "check-password-strength": "^2.0.10",
     "date-fns": "^4.1.0",
     "jwt-decode": "^4.0.0",
+    "lucide-react": "^0.508.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
@@ -29,6 +30,7 @@
     "react-redux": "^9.2.0",
     "react-router-dom": "^6.28.1",
     "react-syntax-highlighter": "^15.6.1",
+    "react-toastify": "^11.0.5",
     "redux-persist": "^6.0.0",
     "sass": "^1.87.0",
     "ts-key-enum": "^3.0.13",
