update frontend Dockerfile 2

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,18 +1,16 @@
 FROM node:18 AS build
 WORKDIR /app
 
-COPY frontend/package*.json ./
+COPY src/package*.json ./
 RUN npm install
 
-COPY frontend .
-
+COPY src ./
 RUN npm run build
 
 FROM node:18 AS production
 WORKDIR /app
 
 RUN npm install -g serve
-
 COPY --from=build /app/dist .
 
 EXPOSE 3000
