update frontend Dockerfile 6

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -1,19 +1,20 @@
 FROM node:18 AS build
-WORKDIR app/frontend
+WORKDIR /app
 
-COPY package*.json ./
-RUN npm install
+COPY frontend/package*.json ./frontend/
+RUN cd frontend && npm install
 
-COPY . .
+COPY frontend ./frontend
 
-RUN npm run build
+RUN cd frontend && npm run build
 
+# Production image
 FROM node:18 AS production
-WORKDIR app/frontend
+WORKDIR /app
 
 RUN npm install -g serve
 
-COPY --from=build app/frontend/dist .
+COPY --from=build /app/frontend/dist .
 
 EXPOSE 3000
 CMD ["serve", "-s", ".", "-l", "3000"]
