--- a/Taskly_Api/Taskly_Api.csproj
+++ b/Taskly_Api/Taskly_Api.csproj
@@ -40,6 +40,7 @@
         </PackageReference>
         <PackageReference Include="Microsoft.Extensions.Identity.Core" Version="8.0.11" />
         <PackageReference Include="Npgsql.EntityFrameworkCore.PostgreSQL" Version="9.0.2" />
+        <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
         <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
     </ItemGroup>
 
