--- a/TasklySender_Infrastructure/TasklySender_Infrastructure.csproj
+++ b/TasklySender_Infrastructure/TasklySender_Infrastructure.csproj
@@ -10,6 +10,9 @@
   <ItemGroup>
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="9.0.5" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="9.0.5" />
+	  <Content Include="HTMLPages\**\*.html">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+	  </Content>
   </ItemGroup>
 
   <ItemGroup>
