--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,2 @@
-VITE_SERVER_URL=https://taskly-backend-0int.onrender.com
-;  VITE_SERVER_URL=http://localhost:5258
+;  VITE_SERVER_URL=https://taskly-backend-0int.onrender.com
+  VITE_SERVER_URL=http://localhost:5258
